--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,9 @@
 <% provide(:title, "Edit user") %>
 <h1>Update your profile</h1>
-
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-
     <%= form_with(model: @user, local: true) do |f| %>
-      <%= render 'shared/error_messages' %>
+      <%= render 'shared/error_messages', object: f.object %>
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
       <%= f.label :email %>
@@ -15,11 +13,10 @@
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
       <%= f.submit "Save changes", class: "btn btn-primary" %>
-<% end %>
-
+    <% end %>
     <div class="gravatar_edit">
-      <%= gravatar_for @user %>
-      <a href="https://gravatar.com/emails" target="_blank">change</a>
+<%= gravatar_for @user %>
+      <a href="https://gravatar.com/emails">change</a>
     </div>
   </div>
 </div>
